--- a/03_sequencias.ipynb
+++ b/03_sequencias.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQPvQ7hyPwgVFAJn4E/Iia",
+      "authorship_tag": "ABX9TyNR7PxzJLaxs2bNMwa6+I/G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1106,12 +1106,609 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# atribuir valores a diversas variáveis de uma só vez utilizando listas ou tuplas.\n",
+        "a, b, c = (1, 2, 3)\n",
+        "a"
+      ],
       "metadata": {
-        "id": "xiCBhS_8_GvN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xiCBhS_8_GvN",
+        "outputId": "7cfee492-7fad-4f70-c2b5-2a7ba2844ea7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para atribuir diversos valores a uma variável só deve-se usar asterisco ao lado da variável."
+      ],
+      "metadata": {
+        "id": "I0fKRDNCRm6O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "*first, middle, last = ['oceanografia','astronomia','engenharia','enfermagem','jornalismo']\n",
+        "first"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zTbDQoVMRaQT",
+        "outputId": "1a4cb7bd-bc9d-472f-860a-33e9e6e17c94"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['oceanografia', 'astronomia', 'engenharia']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "middle"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "bjnPv7YgShgA",
+        "outputId": "9725fa01-39e1-4b8e-b439-2de8b2bdbe84"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'enfermagem'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "last"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "lZw51CyiSjMH",
+        "outputId": "fa411a8b-add7-438e-bafc-16f14b5df043"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'jornalismo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# para mudar a oredem do conteúdo das listas usa-se os métodos 'sort' e 'reverse'\n",
+        "lista = [1, 9, 0, 21, 11, 3, 10, 19, 20, 24]\n",
+        "lista"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bDo4ClzWSkgK",
+        "outputId": "08925b19-4c0b-4beb-ce57-5315bc1955ed"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 9, 0, 21, 11, 3, 10, 19, 20, 24]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.sort() # ordem crescente\n",
+        "lista"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zoh_vwBuUZOW",
+        "outputId": "b3aa5845-1584-446e-f58f-420626265e84"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 3, 9, 10, 11, 19, 20, 21, 24]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.reverse() # ordem decrescente\n",
+        "lista"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JswzYhqGUdrL",
+        "outputId": "c28dc75f-4976-4cee-a3ab-ea0771f1c78c"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[24, 21, 20, 19, 11, 10, 9, 3, 1, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Strings**\n",
+        "\n",
+        "String é uma sequência de caracteres, elas são representadas entre aspas, podendo ser dupla ou simples."
+      ],
+      "metadata": {
+        "id": "w6LdNA_iUq2X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'Here is a string' == \"Here is a string\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z8owFWnIdqcP",
+        "outputId": "3401d20d-5397-4fde-fe41-a4363b8922ef"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Eduarda Valério\"\n",
+        "name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "cGWoXQR3hg8A",
+        "outputId": "540139e1-b042-4cfc-d927-0f0364b91384"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Eduarda Valério'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name.capitalize()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "406VZ1GchmJe",
+        "outputId": "27a89ba4-187e-461a-de61-9834b5693874"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Eduarda valério'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name.lower()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "pS6Xm6f0hrie",
+        "outputId": "3d265ec4-1902-4e5f-9c72-0027035efee0"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'eduarda valério'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name.upper()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "mCauDvmahuuO",
+        "outputId": "658a59d4-52ce-4f19-c3a0-55aa79d42d27"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'EDUARDA VALÉRIO'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name.swapcase()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "QyUFD100hyKh",
+        "outputId": "61a6c627-c4c4-4540-eaf9-c930476db64b"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'eDUARDA vALÉRIO'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"eduarda valério\"\n",
+        "name.title()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "g8IVl2cMh2MA",
+        "outputId": "afa18990-0502-4013-9e8e-5a85f11a6898"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Eduarda Valério'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Strings de formato ou f-strings\n",
+        "nome = \"Eduarda\"\n",
+        "idade = 19\n",
+        "altura = 157\n",
+        "f\"Olá {nome}, você tem {idade} anos e {altura} centímetros de altura\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "u6BAfa7OiNGZ",
+        "outputId": "bb591a1e-94a1-4159-93d1-3fb99679a43c"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Olá Eduarda, você tem 19 anos e 157 centímetros de altura'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# usar f-strings com listas\n",
+        "disciplinas = ['microbiologia', 'circulação oceânica', 'ciclos biogeoquímicos', 'sedimentação']\n",
+        "f\"A matéria {disciplinas[0]} é DOB, já as disciplinas {disciplinas[1]}, {disciplinas[2]} e {disciplinas[3]} são do DOF\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "c2awp7-eisdS",
+        "outputId": "218a27c8-1be6-4044-a0ac-3bc4c4446184"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'A matéria microbiologia é DOB, já as disciplinas circulação oceânica, ciclos biogeoquímicos e sedimentação são do DOF'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Intervalos**\n",
+        "\n",
+        "Representa uma série de números ordenados por valor. Os objetos de intervalo podem ter argumentos iniciais (opcional), finais e de passos (opcional)."
+      ],
+      "metadata": {
+        "id": "6xRORfIVkT3z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "range(19)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8C5PX49qjo_-",
+        "outputId": "ad24cf52-ef28-496a-934f-daf2c1aad87d"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(0, 19)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(19)) # listar cada termo"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DOOtt-vQoR6C",
+        "outputId": "b3f388a6-db39-4d56-ce23-954672163518"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(1, 19, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QebeEX0EoYU9",
+        "outputId": "5fa85fb0-0cd6-462c-d562-2af3fe204a0f"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(19, 1, -2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R3N5r3maolcB",
+        "outputId": "c414ccfd-48ca-426f-8f39-be391da5d087"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[19, 17, 15, 13, 11, 9, 7, 5, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
     }
   ]
 }
